[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["ilampropoulos"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.1.1"
flask-smorest = "^0.46.1"

[tool.poetry.dev-dependencies]
pytest = "^8.4.1"
pytest-flask = "^1.3.0"
requests = "^2.32.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
